fix figure, column alignments

--- a/portal/static/less/exerciseDiet.less
+++ b/portal/static/less/exerciseDiet.less
@@ -1080,7 +1080,7 @@ body.page-exercise-diet-portal {
         display: inline-block;
         text-transform: uppercase;
         text-align: center;
-        padding: 26px 25px 20px;
+        padding: 24px 25px 20px;
         width: 250px;
         margin-top: 40px;
     }
