--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -2211,6 +2211,11 @@ pre code {
     .module {
         width: 1088px
     }
+    .module-wrap--theme-columns {
+        .module {
+            width: 1164px;
+        }
+    }
 }
 
 .container-fluid {
@@ -5885,7 +5890,7 @@ only screen and (min-resolution:2dppx) {
     position: absolute;
     margin-left: 5px;
     color: #4C5E6E;
-    top: -5px;
+    top: -2px;
     right: 0
 }
 
@@ -7357,7 +7362,7 @@ figure.nav-overlay {
     position: relative;
     z-index: 10;
     margin: 0 auto 50px;
-    max-width: 760px
+    max-width: 748px
 }
 
 .home-intro .intro__main {
